[package]
name = "openauth"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "../../README.md"
description = "Rust authentication toolkit."
keywords.workspace = true
categories.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
http.workspace = true
openauth-core.workspace = true
openauth-deadpool-postgres = { workspace = true, optional = true }
openauth-passkey = { workspace = true, optional = true }
openauth-plugins = { workspace = true, optional = true }
openauth-sqlx = { workspace = true, default-features = false, optional = true }
openauth-sso = { workspace = true, optional = true }
openauth-telemetry.workspace = true
openauth-tokio-postgres = { workspace = true, optional = true }
serde_json.workspace = true
tokio.workspace = true

[features]
default = []
deadpool-postgres = ["dep:openauth-deadpool-postgres"]
passkey = ["dep:openauth-passkey"]
plugins = ["dep:openauth-plugins"]
sqlx = ["dep:openauth-sqlx"]
sqlx-mysql = ["sqlx", "openauth-sqlx/mysql"]
sqlx-postgres = ["sqlx", "openauth-sqlx/postgres"]
sqlx-sqlite = ["sqlx", "openauth-sqlx/sqlite"]
sso = ["dep:openauth-sso"]
tokio-postgres = ["dep:openauth-tokio-postgres"]

[dev-dependencies]
openauth-sqlx = { workspace = true, features = ["mysql", "postgres", "sqlite"] }
sqlx.workspace = true

[lints]
workspace = true
