[package]
name = "openauth"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
description = "Rust authentication toolkit."
keywords.workspace = true
categories.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
http.workspace = true
openauth-core = { workspace = true, features = ["default"] }
openauth-deadpool-postgres = { workspace = true, optional = true }
openauth-i18n = { workspace = true, optional = true }
openauth-oidc = { workspace = true, optional = true }
openauth-oauth-provider = { workspace = true, optional = true }
openauth-passkey = { workspace = true, optional = true }
openauth-plugins = { workspace = true, optional = true }
openauth-scim = { workspace = true, optional = true }
openauth-saml = { workspace = true, optional = true }
openauth-sqlx = { workspace = true, default-features = false, optional = true }
openauth-sso = { workspace = true, optional = true }
openauth-stripe = { workspace = true, optional = true }
openauth-telemetry = { workspace = true, optional = true }
openauth-tokio-postgres = { workspace = true, optional = true }
serde_json.workspace = true
tokio.workspace = true

[features]
default = []
deadpool-postgres = ["dep:openauth-deadpool-postgres"]
i18n = ["dep:openauth-i18n"]
oidc = ["dep:openauth-oidc", "openauth-sso?/oidc"]
oauth-provider = ["dep:openauth-oauth-provider"]
passkey = ["dep:openauth-passkey"]
plugins = ["dep:openauth-plugins"]
scim = ["dep:openauth-scim"]
saml = ["dep:openauth-saml", "openauth-sso?/saml"]
saml-signed = ["saml", "openauth-saml/saml-signed", "openauth-sso?/saml-signed"]
sqlx = ["dep:openauth-sqlx"]
sqlx-mysql = ["sqlx", "openauth-sqlx/mysql"]
sqlx-postgres = ["sqlx", "openauth-sqlx/postgres"]
sqlx-sqlite = ["sqlx", "openauth-sqlx/sqlite"]
sso = ["dep:openauth-sso"]
stripe = ["dep:openauth-stripe"]
telemetry = ["dep:openauth-telemetry", "openauth-telemetry/oauth"]
tokio-postgres = ["dep:openauth-tokio-postgres"]

[dev-dependencies]
openauth-core = { workspace = true, features = ["test-utils"] }
openauth-sqlx = { workspace = true, features = ["mysql", "postgres", "sqlite"] }
sqlx.workspace = true

[lints]
workspace = true
