[package]
name = "rustauth-actix-web"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/rustauth-actix-web"
readme = "README.md"
description = "Actix Web integration for RustAuth."
keywords.workspace = true
categories.workspace = true

[lib]
path = "src/lib.rs"

[features]
test-utils = []

[dependencies]
actix-web.workspace = true
http.workspace = true
rustauth.workspace = true
serde_json.workspace = true
thiserror.workspace = true
url.workspace = true

[dev-dependencies]
futures-util = "0.3"
http.workspace = true
rustauth = { workspace = true, features = ["oauth", "social-providers", "jose"] }
rustauth-core = { workspace = true, features = ["test-utils"] }
time.workspace = true
tokio = { workspace = true, features = ["io-util", "macros", "net", "rt-multi-thread", "time"] }
url.workspace = true

[lints]
workspace = true
